--- a/BallClub/BallClub/Custom Views/Friends/EditInvitedFriendsCollectionViewCell.xib
+++ b/BallClub/BallClub/Custom Views/Friends/EditInvitedFriendsCollectionViewCell.xib
@@ -18,9 +18,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Josh" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="01G-Pv-Zb9">
-                        <rect key="frame" x="14" y="49" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Josh" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="01G-Pv-Zb9">
+                        <rect key="frame" x="0.0" y="49" width="70" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -39,9 +39,9 @@
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="01G-Pv-Zb9" secondAttribute="trailing" constant="14" id="2XQ-Fl-cBw"/>
+                <constraint firstAttribute="trailing" secondItem="01G-Pv-Zb9" secondAttribute="trailing" id="2XQ-Fl-cBw"/>
                 <constraint firstItem="ry8-B1-gj6" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="JxD-91-zqi"/>
-                <constraint firstItem="01G-Pv-Zb9" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="14" id="Pu9-VG-fVT"/>
+                <constraint firstItem="01G-Pv-Zb9" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Pu9-VG-fVT"/>
                 <constraint firstItem="01G-Pv-Zb9" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="dmu-bq-ZEW"/>
                 <constraint firstItem="ry8-B1-gj6" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="fYK-Ul-REt"/>
                 <constraint firstItem="01G-Pv-Zb9" firstAttribute="top" secondItem="ry8-B1-gj6" secondAttribute="bottom" constant="-1" id="uL7-nM-pvu"/>
