--- a/BallClub/BallClub/Storyboards/Maps.storyboard
+++ b/BallClub/BallClub/Storyboards/Maps.storyboard
@@ -354,7 +354,7 @@
                             <inset key="imageInsets" minX="-10" minY="0.0" maxX="0.0" maxY="0.0"/>
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
-                                <action selector="backButtonPressed:" destination="gKm-3E-dYg" id="c6k-Lo-PoI"/>
+                                <action selector="backButtonPressed:" destination="gKm-3E-dYg" id="cnZ-Q2-m3L"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
